Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12017

Unclear error with flashback: Variable 'binlog_format' can't be set to the value of 'statement'

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2(EOL)
    • 10.2.6
    • Replication
    • None

    Description

      When flashback is enabled, the local value of binlog_format can still be set to STATEMENT or MIXED, and an informative warning is produced:

      MariaDB [test]> show warnings;
      +---------+------+------------------------------------------------------------------+
      | Level   | Code | Message                                                          |
      +---------+------+------------------------------------------------------------------+
      | Warning | 1105 | MariaDB Galera and flashback do not support binlog format: MIXED |
      +---------+------+------------------------------------------------------------------+
      1 row in set (0.01 sec)
      

      However, when one attempts to set the global value, it produces a generic error:

      MariaDB [test]> set global binlog_format=mixed;
      ERROR 1231 (42000): Variable 'binlog_format' can't be set to the value of 'mixed'
      

      Maybe there is a reason why a local value can be set and global can not, but then the error message should at least say why it is not possible, referring to flashback.

      Attachments

        Activity

          Transition Time In Source Status Execution Times
          Sachin Setiya (Inactive) made transition -
          Open In Progress
          58d 13h 52m 1
          Sachin Setiya (Inactive) made transition -
          In Progress In Review
          1m 40s 1
          Sergei Golubchik made transition -
          In Review Stalled
          17d 6h 53m 1
          Sachin Setiya (Inactive) made transition -
          Stalled Closed
          1d 9h 2m 1

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.