MDEV-12017 Unclear error with flashback: Variable 'binlog_format' can't ...

When WSREP(thd) is not true we will use my_error(...) to print error. This
will set thd->is_error() to true and we wont be getting generic error.